# ChangeLog for games-fps/enemy-territory-etpro
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/enemy-territory-etpro/ChangeLog,v 1.11 2007/11/06 21:07:32 wolf31o2 Exp $

  06 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  -enemy-territory-etpro-3.2.5.ebuild, -enemy-territory-etpro-3.2.6.ebuild,
  enemy-territory-etpro-3.2.6-r1.ebuild:
  Stable on amd64/x86 wrt bug #151465.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*enemy-territory-etpro-3.2.6-r1 (23 Oct 2006)

  23 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +enemy-territory-etpro-3.2.6-r1.ebuild:
  Added new revision for testing which uses the brand-spankin-new
  games-mods.eclass to reduce ebuild code.

*enemy-territory-etpro-3.2.6 (27 Sep 2006)

  27 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -enemy-territory-etpro-3.0.1.ebuild, -enemy-territory-etpro-3.1.0.ebuild,
  -enemy-territory-etpro-3.2.0.ebuild, -enemy-territory-etpro-3.2.1.ebuild,
  -enemy-territory-etpro-3.2.4.ebuild, +enemy-territory-etpro-3.2.6.ebuild:
  Version bump to 3.2.6 from 3.2.5, cleaning up some older ebuilds, and
  closing bug #141486.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-enemy-territory-etpro-3.0.1,
  files/digest-enemy-territory-etpro-3.1.0,
  files/digest-enemy-territory-etpro-3.2.0,
  files/digest-enemy-territory-etpro-3.2.1,
  files/digest-enemy-territory-etpro-3.2.4, Manifest:
  Fixing SHA256 digest, pass four

*enemy-territory-etpro-3.2.5 (27 Mar 2006)

  27 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +enemy-territory-etpro-3.2.5.ebuild:
  Version bump to 3.2.5 and closing bug #121553.

*enemy-territory-etpro-3.2.4 (27 Nov 2005)

  27 Nov 2005; Julien Allanos <dju@gentoo.org>
  +enemy-territory-etpro-3.2.4.ebuild:
  Version bumped to 3.2.4, as rename ebuild works. Closing bug #113643.

*enemy-territory-etpro-3.2.1 (09 Sep 2005)
