@@ -1,11 +1,13 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/enemy-territory-etpro/enemy-territory-etpro-3.2.6-r1.ebuild,v 1.3 2009/10/01 21:08:07 nyhm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/enemy-territory-etpro/enemy-territory-etpro-3.2.6-r1.ebuild,v 1.4 2009/10/08 01:50:13 nyhm Exp $
 
+EAPI=2
+
+GAME="enemy-territory"
 MOD_DESC="a series of minor additions to Enemy Territory to make it more fun"
 MOD_NAME="ETPro"
 MOD_DIR="etpro"
-GAME="enemy-territory"
 
 inherit games games-mods
 
