@@ -1,6 +1,10 @@
 # ChangeLog for games-fps/enemy-territory-etpro
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/enemy-territory-etpro/ChangeLog,v 1.11 2007/11/06 21:07:32 wolf31o2 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-fps/enemy-territory-etpro/ChangeLog,v 1.12 2009/10/08 01:50:13 nyhm Exp $
+
+  08 Oct 2009; Tristan Heaven <nyhm@gentoo.org>
+  enemy-territory-etpro-3.2.6-r1.ebuild:
+  EAPI=2
 
   06 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   -enemy-territory-etpro-3.2.5.ebuild, -enemy-territory-etpro-3.2.6.ebuild,
